# Redball

./: .all-contributorsrc  .buildversion  .code-workspace  .cursorrules  .editorconfig  .gitignore  AGENT.md  BUILD_SYSTEM.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Directory.Build.props  IMPLEMENTATION_SUMMARY.md  LICENSE  PreviewUpdateUI.cs  README.md  RELEASE_SYSTEM_UPDATES.md  ROADMAP.md  Redball.Tests.ps1  Redball.json  Redball.ps1  Redball.state.json  Redball.v3.sln  Roadmap_PC.md  Roadmap_PC.txt  Roadmap_Redsball_V2.md  SECURITY.md  SKILL.md  TESTING_ON_LINUX.md  THIRD-PARTY-NOTICES.md  WIKI.md  add-bom.ps1  build.ps1  build_driver.ps1  build_errors.txt  build_log_v2.txt  build_log_v3.txt  build_log_v4.txt  build_log_v5.txt  (+36 more)
src/Redball.Linux/: BUILD.md  README.md  meson.build  redball.in
src/Redball.Linux/.flatpak-builder/checksums/: x86_64-com.armatec.Redball.yml
src/Redball.Linux/data/: com.armatec.Redball.desktop.in  com.armatec.Redball.gschema.xml  com.armatec.Redball.metainfo.xml.in
src/Redball.Linux/flatpak/: com.armatec.Redball.yml
src/Redball.Linux/flatpak/repo/: summary  summary.idx
src/Redball.Linux/flatpak/repo/refs/heads/app/com.armatec.Redball/x86_64/: master
src/Redball.Linux/flatpak/repo/summaries/: 0a957d4a87b47ca323ee0e5ad4c434a7f8404c602351e1979c985b394cb4273d-047ee5d9b35fa743a000f23d51e9b31f33d560f4b15b64daec572ee33b2c1980.delta  0f97a2a95611739dff524042a8abf8b3be46087839685d0d3f0508f59534b17c-bff1508fa80e4f6466ac0a081f0bc756a66fc673658b06f416875a24e62d3776.delta  13dc573c3780011541f750952099bec5115add5f014cf60aa7018a316ccb5862-a07d20374857558c69ae32b8df0cf550de504df796846a1ddc2c72a0ad17cd6a.delta  1890977c42473624efd911443d62675971c6fe03437bfa3bd399ef15f56040d8-1c169eb00d6a2682898dbe15f09d45143cb67af918b73dd4f8caaf0be50ec082.delta  1890977c42473624efd911443d62675971c6fe03437bfa3bd399ef15f56040d8-23ae3eb916686e55a8ea1746445f76d93ae73738165e13334ded6876dd920376.delta  1890977c42473624efd911443d62675971c6fe03437bfa3bd399ef15f56040d8-27f7ae3f9f1ea66a2693517fc5c4f663da7390ff529176b5a9aff9cd40ebcbc3.delta  1890977c42473624efd911443d62675971c6fe03437bfa3bd399ef15f56040d8-3965a22be2a5ae711a976410ecb0be2b78a19b17237b48a636941a926e006f58.delta  1890977c42473624efd911443d62675971c6fe03437bfa3bd399ef15f56040d8-5f0f1cdae2bed3f5fa40aa539513798b5d57397aa3a7f813db4d4fa1be6c4972.delta  1890977c42473624efd911443d62675971c6fe03437bfa3bd399ef15f56040d8-c0a617a736849414e4517bbed1259b829ef7fb5c97912ad500f05f7ca99241bd.delta  1890977c42473624efd911443d62675971c6fe03437bfa3bd399ef15f56040d8-eb87b68f5a726fddbf9e5a3451dde6d4614db357757b2a3fdd4d929206b971f7.delta  234ee588d138adf9805b9ec96269729112db7eed71f682eb5e3a34722ad9c643-27f7ae3f9f1ea66a2693517fc5c4f663da7390ff529176b5a9aff9cd40ebcbc3.delta  234ee588d138adf9805b9ec96269729112db7eed71f682eb5e3a34722ad9c643-5f0f1cdae2bed3f5fa40aa539513798b5d57397aa3a7f813db4d4fa1be6c4972.delta  234ee588d138adf9805b9ec96269729112db7eed71f682eb5e3a34722ad9c643-eb87b68f5a726fddbf9e5a3451dde6d4614db357757b2a3fdd4d929206b971f7.delta  23f775170f567a1b7abd6ad8c45d6c51cbe36fee25ca870bfc090446350bd297-26578b49bea9ad07520ef3ed9a2d2abf9b68af6635ee20a9de8c804dd58374fb.delta  23f775170f567a1b7abd6ad8c45d6c51cbe36fee25ca870bfc090446350bd297-9aa04da5c0762661572eb463703d8499f327aa90160b6e1342cd0b2dd090215c.delta  255f557e2e7c01257dd63a0d75c496af7f3d29fe50dc9e5b021cf72f7d1f85d8-b418702f9d957e6706475ec283a8442d4599a9f139bb96756f5b647f48a3299a.delta  (+42 more)
src/Redball.Linux/po/: meson.build
src/Redball.Linux/redball/: __init__.py  config.py  keepawake.py  main.py  timer.py  tray.py  window.py
src/Redball.Linux/redball/widgets/: preferences.py
src/Redball.Linux/tests/: meson.build
(+761 files in other folders)
